--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@scandltd/vue-injector": "^3.3.7",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.8.12",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2"
